--- a/app/src/main/res/layout/fragment_my_uploads.xml
+++ b/app/src/main/res/layout/fragment_my_uploads.xml
@@ -3,12 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/cream"
     tools:context=".Fragments.MyUploadsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <!-- The FrameLayout will hold the dynamically added cards -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:padding="16dp"/>
+
 
 </FrameLayout>
