--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -36,4 +36,15 @@
     <action
         android:id="@+id/action_global_profileFragment"
         app:destination="@id/profileFragment" />
+    <fragment
+        android:id="@+id/editPostFragment"
+        android:name="EditPostFragment"
+        android:label="EditPostFragment" />
+    <action
+        android:id="@+id/action_global_editPostFragment"
+        app:destination="@id/editPostFragment">
+        <argument
+            android:name="post"
+            app:argType="com.getpet.Model.Entities.PostEntity"/>
+    </action>
 </navigation>
