--- a/app/src/main/res/layout/single_post_card.xml
+++ b/app/src/main/res/layout/single_post_card.xml
@@ -10,6 +10,8 @@
     app:strokeWidth="3dp"
     tools:ignore="MissingDefaultResource">
 
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -17,7 +19,7 @@
 
         <!-- Media -->
         <ImageView
-            android:id="@+id/my_post_image"
+            android:id="@+id/post_image"
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:contentDescription="@string/my_card_post_image"
@@ -51,7 +53,7 @@
                     android:textColor="?android:attr/textColorSecondary" />
 
                 <TextView
-                    android:id="@+id/my_post_kind"
+                    android:id="@+id/post_kind"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -79,7 +81,7 @@
                     android:textColor="?android:attr/textColorSecondary" />
 
                 <TextView
-                    android:id="@+id/my_post_age"
+                    android:id="@+id/post_age"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -107,7 +109,7 @@
                     android:textColor="?android:attr/textColorSecondary" />
 
                 <TextView
-                    android:id="@+id/my_post_about"
+                    android:id="@+id/post_about"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -134,7 +136,7 @@
                     android:textColor="?android:attr/textColorSecondary" />
 
                 <TextView
-                    android:id="@+id/my_post_phone"
+                    android:id="@+id/post_phone"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -162,7 +164,7 @@
                     android:textColor="?android:attr/textColorSecondary" />
 
                 <TextView
-                    android:id="@+id/my_post_location"
+                    android:id="@+id/post_location"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -191,7 +193,7 @@
                     android:textColor="?android:attr/textColorSecondary" />
 
                 <TextView
-                    android:id="@+id/my_post_owner"
+                    android:id="@+id/post_owner"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -201,33 +203,37 @@
                     android:textColor="?android:attr/textColorSecondary" />
             </LinearLayout>
 
-            <!-- Buttons -->
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
                 android:orientation="horizontal">
 
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/edit_btn"
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"
-                    android:text="edit"
-                    style="?attr/borderlessButtonStyle"
-                    android:textColor="@color/textColor"
-                    android:textStyle="bold" />
+                    android:layout_marginTop="8dp"
+                    android:text="Good with Children: "
+                    android:textSize="15sp"
+                    android:fontFamily="@font/raleway"
+                    android:textStyle="bold"
+                    android:textAppearance="?attr/textAppearanceBody2"
+                    android:textColor="?android:attr/textColorSecondary" />
 
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/delete_btn"
-                    android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/Api"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Delete"
-                    style="?attr/borderlessButtonStyle"
-                    android:textColor="@color/textColor"
-                    android:textStyle="bold" />
+                    android:layout_weight="1"
+                    android:layout_marginTop="7dp"
+                    android:layout_marginStart="4dp"
+                    android:textAppearance="?attr/textAppearanceBody2"
+                    android:textColor="?android:attr/textColorSecondary" />
             </LinearLayout>
+
 
         </LinearLayout>
     </LinearLayout>
+
+
+
 </com.google.android.material.card.MaterialCardView>
