--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigation xmlns:android="http://schemas.android.com/apk/res/android"
+         <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph_main"
@@ -43,6 +43,17 @@
     <action
         android:id="@+id/action_global_editPostFragment"
         app:destination="@id/editPostFragment">
+        <argument
+            android:name="post"
+            app:argType="com.getpet.Model.Entities.PostEntity"/>
+    </action>
+    <fragment
+        android:id="@+id/singlePostCardFragment"
+        android:name="SinglePostCardFragment"
+        android:label="SinglePostCardFragment" />
+    <action
+        android:id="@+id/action_global_singlePostCardFragment"
+        app:destination="@id/singlePostCardFragment" >
         <argument
             android:name="post"
             app:argType="com.getpet.Model.Entities.PostEntity"/>
