--- a/app/src/main/res/layout/single_post_card.xml
+++ b/app/src/main/res/layout/single_post_card.xml
@@ -212,7 +212,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:text="Good with Children: "
+                    android:text="Breed Information: "
                     android:textSize="15sp"
                     android:fontFamily="@font/raleway"
                     android:textStyle="bold"
