--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -8,7 +8,7 @@
         <!-- Profile Picture ImageView -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="325dp"
         android:layout_marginBottom="10dp"
         android:orientation="vertical">
         <ImageView
@@ -19,15 +19,7 @@
             android:layout_gravity="center"
             android:layout_height="match_parent"
             android:contentDescription="@string/profile_picture_description" />
-        <ImageButton
-            android:id="@+id/change_profile_pic"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/ic_add_profile"
-            android:background="@color/transparent"
-            android:layout_marginTop="-60dp"
-            android:layout_marginStart="10dp"
-            />
+
     </LinearLayout>
 
     <TextView
@@ -48,20 +40,19 @@
         android:orientation="vertical"
         android:layout_gravity="center"
         android:paddingHorizontal="20dp">
-    <TextView
-        android:id="@+id/change_a_password_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="10dp"
-        android:fontFamily="@font/raleway"
-        android:text="@string/edit_profile"
-        android:textColor="@color/textColor"
-        android:textSize="25sp"
-        android:textStyle="bold">
-    </TextView>
         <EditText
-            android:id="@+id/change_email"
+            android:id="@+id/user_name"
+            android:layout_width="280dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:drawableStart="@drawable/ic_name"
+            android:hint="@string/register_label_name"
+            android:textColor="@color/textColor"
+            android:fontFamily="@font/raleway"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+        <EditText
+            android:id="@+id/show_email"
             android:layout_width="280dp"
             android:layout_height="60dp"
             android:layout_gravity="center"
@@ -74,88 +65,13 @@
             android:layout_marginStart="6dp"
             />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="center"
-            >
-
-            <EditText
-                android:id="@+id/change_password"
-                android:layout_width="280dp"
-                android:layout_height="60dp"
-                android:layout_gravity="center"
-                android:drawableStart="@drawable/ic_password"
-                android:hint="@string/private_area_label_password_filling"
-                android:textColor="@color/textColor"
-                android:fontFamily="@font/raleway"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:layout_marginStart="6dp"
-                android:layout_centerVertical="true"
-                android:layout_toEndOf="@id/showChangePasswordButton"
-                android:inputType="textPassword"
-                />
-
-            <ImageButton
-                android:id="@+id/showChangePasswordButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end|center_horizontal"
-                android:background="@android:color/transparent"
-                android:contentDescription="@string/register_label_show_password"
-                android:padding="8dp"
-                android:layout_marginTop="8dp"
-                android:src="@drawable/ic_hide_password"
-                android:onClick="onShowPasswordClick"/>
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="center"
-            >
-
-            <EditText
-                android:id="@+id/change_confirm_password"
-                android:layout_width="280dp"
-                android:layout_height="60dp"
-                android:layout_gravity="center"
-                android:drawableStart="@drawable/ic_password"
-                android:hint="@string/private_area_label_confirm_password"
-                android:textColor="@color/textColor"
-                android:fontFamily="@font/raleway"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:layout_marginStart="6dp"
-                android:layout_centerVertical="true"
-                android:layout_toEndOf="@id/showChangeConfirmPasswordButton"
-                android:inputType="textPassword"
-                />
-
-            <ImageButton
-                android:id="@+id/showChangeConfirmPasswordButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end|center_horizontal"
-                android:background="@android:color/transparent"
-                android:contentDescription="@string/register_label_show_password"
-                android:padding="8dp"
-                android:layout_marginTop="8dp"
-                android:src="@drawable/ic_hide_password"
-                android:onClick="onShowPasswordClick"/>
-        </RelativeLayout>
-
-
         <com.getpet.components.PrimaryButton
-            android:id="@+id/reset_password_btn"
+            android:id="@+id/edit_profile_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
-            android:text="@string/save_changes" />
+            android:text="@string/edit_profile_btn" />
     </LinearLayout>
 
 
