Pulling to continue working

--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_gravity="center"
-            android:text="@string/edir_profile_title"
+            android:text="Edit Profile"
             android:textSize="40sp"
             android:textStyle="bold"
             android:fontFamily="@font/handlee"
